--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,12 +11,9 @@
     <string name="label_rtt">RTT</string>
     <string name="label_server">Server</string>
     <string name="label_interval">Interval</string>
-    <string name="value_default_server">8.8.8.8</string>
     <string name="value_na">N/A</string>
     <string name="format_rtt">%1$s %2$s</string>
     <string name="error_uncaught">Uncaught exception</string>
     <string name="datetime_format">HH:mm:ss.SSS</string>
-    <string name="default_count">5</string>
-
-
+    <string name="clear">Clear</string>
 </resources>
